--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion '29.0.3'
+    compileSdkVersion 30
     defaultConfig {
         applicationId "com.gigabytedevsinc.mezue.ouros"
         minSdkVersion 15
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 7
         versionName "1.0.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -22,7 +21,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     /*
                          * CandyBar Material Dashboard Library
                          *
@@ -34,6 +33,6 @@ dependencies {
                          * 5. Clean project
                          * 6. Done
                          */
-    compile 'com.github.danimahardhika.candybar-library:core:3.4.1'
+    implementation 'com.github.danimahardhika.candybar-library:core:3.4.1'
 }
 
