--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,22 +16,23 @@ buildscript {
 }
 
 allprojects {
-
     repositories {
         mavenCentral()
         jcenter()
         maven { url "https://jitpack.io" }
+        flatDir {
+            dirs 'libs'
+        }
         google()
     }
 
     //NOTE: This is important
     rootProject.ext {
-        BuildTools = "29.0.3"
         MinSdk = 15
         TargetSdk = 29
         CompileSdk = 29
+        SupportLibrary = "28.0.0"
     }
-
 }
 
 task clean(type: Delete) {
