Reworked Ouros build.gradle and gradle.properties

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,21 +18,15 @@ android {
     }
     productFlavors {
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    /*
-                         * CandyBar Material Dashboard Library
-                         *
-                         * How to update?
-                         * 1. See latest version at GitHub, https://github.com/danimahardhika/candybar-library/releases
-                         * 2. Change candybar dependency matching latest version
-                         * 3. com.github.danimahardhika.candybar-library:core:$versionNumber
-                         * 4. Sync Project with Gradle Files
-                         * 5. Clean project
-                         * 6. Done
-                         */
-    implementation 'com.github.danimahardhika.candybar-library:core:3.4.1'
+    implementation project (':library')
 }
 
